--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,12 @@
-#game-canvas{
-    background-image: url(./images/world-1.1.jpg),
+/* *{
+    border: 1px solid red;
+} */
+
+/* #landing-page-container{
+    display: inline-flex;
+} */
+
+#landing-page-hero{
+    display: block;
+    width: 50%;
 }
